Some basic code cleanup